Update NPM package name to lowercase

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-libVLC",
+  "name": "cordova-plugin-libvlc",
   "version": "0.1.1",
   "description": "Cross-platform plugin for Cordova / PhoneGap to to easily stream play videos using libVLC. Available for Android ONLY for Now.",
   "cordova": {
-    "id": "cordova-plugin-libVLC",
+    "id": "cordova-plugin-libvlc",
     "platforms": [
       "android"
     ]
