--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-libVLC"
-        version="0.1.2">
+        id="cordova-plugin-libvlc"
+        version="0.1.3">
     <name>Cordova libVLC</name>
     <description>Cross-platform plugin for Cordova / PhoneGap to to easily stream play videos using libVLC. Available for Android ONLY for Now.</description>
     <license>Apache 2.0</license>
